# automni_ws

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/automni_resolution/: mazeActionAction.h  mazeActionActionFeedback.h  mazeActionActionGoal.h  mazeActionActionResult.h  mazeActionFeedback.h  mazeActionGoal.h  mazeActionResult.h
devel/include/stage_ros/: StageRosGetPoses.h  StageRosGetPosesRequest.h  StageRosGetPosesResponse.h  StageRosSetPoses.h  StageRosSetPosesRequest.h  StageRosSetPosesResponse.h
devel/lib/pkgconfig/: automni_resolution.pc  stage_ros.pc
devel/lib/stage_ros/: stageros
src/automni_resolution/: CMakeLists.txt  escape_maze_server.py  package.xml  res.rviz
src/automni_resolution/action/: mazeAction.action
src/automni_resolution/launch/: load_map.launch  mapping.launch
src/automni_resolution/msg/: MazeAction.msg  MazeActionFeedback.msg  MazeActionGoal.msg  MazeActionResult.msg  MazeFeedback.msg
src/automni_resolution/scripts/: aa.py  axclient.py  axserver.py  dynamic_action.py  escape_maze_server.py  library.py  maze_client.py
src/stage_ros/: CMakeLists.txt
src/stage_ros/scripts/: set_position_client.py
src/stage_ros/src/: stageros.cpp
src/stage_ros/srv/: StageRosGetPoses.srv  StageRosSetPoses.srv
src/stage_sim_worlds/: CMakeLists.txt  README.md  package.xml
src/stage_sim_worlds/floorplan_images/: maze.pgm  maze.yaml
src/stage_sim_worlds/launch/: map.launch
src/stage_sim_worlds/scripts/: resize_image.py
src/stage_sim_worlds/worlds/: empty_1robot.world  practical_exam.world
(+75 files in other folders)
