<?xml version="1.0"?>
<package>
  <name>stage_sim_worlds</name>
  <version>0.0.0</version>
  <description>This repo contains the worlds used by the stage simulator</description>

  <maintainer email="samuel@automni.com.br">Samuel Goes</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
